<resources>
    <string name="app_name">Flame</string>
    <string name="profile">Profile</string>
    <string name="streaks">Streaks</string>
    <string name="add">Add</string>
    <string name="textview">TextView</string>
    <string name="_143">143</string>
    <string name="days">days</string>
    <string name="streak">Streak:</string>
    <string name="since">Since:</string>
    <string name="category">Category:</string>
    <string name="flame">flame</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="habit_name">Habit Name:</string>
    <string name="drink_64oz_water">Drink 64oz water</string>
    <string name="health">Health</string>
    <string name="color">Color:</string>
    <string name="save">Save</string>
    <string name="nate_b">Nate B.</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="flame_title">FLAME</string>
    <string name="welcome_to">welcome to</string>
    <string name="flame_logo">flame logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
