<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AddStreakFragment">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/drink_64oz_water"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/categoryEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/health"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/futura_heavy"
        android:text="@string/habit_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/futura_heavy"
        android:text="@string/category"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/futura_heavy"
        android:text="@string/color"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryEditText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/yellowColorContainer"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/yellow"
        app:layout_constraintEnd_toStartOf="@+id/redColorContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/orangeColorContainer"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/orange"
        app:layout_constraintEnd_toStartOf="@+id/redColorContainer"
        app:layout_constraintStart_toEndOf="@+id/yellowColorContainer"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/redColorContainer"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pinkColorContainer"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/pink"
        app:layout_constraintEnd_toStartOf="@+id/purpleColorContainer"
        app:layout_constraintStart_toEndOf="@+id/redColorContainer"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/purpleColorContainer"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/redColorContainer"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/darkblueColorContainer"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/darkblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lightblueColorContainer"
        app:layout_constraintTop_toBottomOf="@+id/redColorContainer">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/blueColorContainer"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/blue"
        app:layout_constraintEnd_toStartOf="@+id/darkblueColorContainer"
        app:layout_constraintStart_toEndOf="@+id/lightblueColorContainer"
        app:layout_constraintTop_toBottomOf="@+id/redColorContainer">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lightblueColorContainer"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/lightblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redColorContainer">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lightgreenColorContainer"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/lightgreen"
        app:layout_constraintEnd_toStartOf="@+id/lightblueColorContainer"
        app:layout_constraintStart_toEndOf="@+id/greenColorContainer"
        app:layout_constraintTop_toBottomOf="@+id/redColorContainer">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/greenColorContainer"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/green"
        app:layout_constraintEnd_toStartOf="@+id/lightblueColorContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redColorContainer">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lightblueColorContainer"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
